--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.16",
+    "@mui/material": "^5.14.16",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.4",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
@@ -17,6 +22,9 @@
     "pg": "^8.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.18.0",
+    "react-router-dom": "^6.18.0",
+    "styled-components": "^6.1.0",
     "vite-express": "*",
     "volleyball": "^1.5.1"
   },
