--- a/package.json
+++ b/package.json
@@ -9,12 +9,10 @@
     "build": "vite build"
   },
   "dependencies": {
-
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    
-
+    "axios": "^1.6.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
@@ -23,12 +21,8 @@
     "pg": "^8.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-
-    "react-router-dom": "^6.18.0",
-
     "react-router": "^6.18.0",
-
-
+    "react-router-dom": "^6.18.0",
     "styled-components": "^6.1.0",
     "vite-express": "*",
     "volleyball": "^1.5.1"
