--- a/package.json
+++ b/package.json
@@ -14,15 +14,19 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.6.0",
     "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "bootstrap": "^5.3.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.1",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-router": "^6.18.0",
     "react-router-dom": "^6.18.0",
+    "react-scripts": "^5.0.1",
     "styled-components": "^6.1.0",
     "vite-express": "*",
     "volleyball": "^1.5.1"
