--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router": "^6.18.0",
     "react-router-dom": "^6.19.0",
     "react-scripts": "^5.0.1",
+    "reactjs-popup": "^2.0.6",
     "styled-components": "^6.1.0",
     "vite-express": "*",
     "volleyball": "^1.5.1"
