--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
@@ -28,6 +29,7 @@
     "react-router-dom": "^6.19.0",
     "react-scripts": "^5.0.1",
     "reactjs-popup": "^2.0.6",
+    "stripe": "^14.7.0",
     "styled-components": "^6.1.0",
     "vite-express": "*",
     "volleyball": "^1.5.1"
